changed bsc code, added script for combining parcellations

--- a/connectivity_analysis/bsc/dn_bs_01_betamaps_glm.ipynb
+++ b/connectivity_analysis/bsc/dn_bs_01_betamaps_glm.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Betamaps GLM\n",
+    "\n",
+    "Here, beta maps for individual trials are calculated for all subjects and both task conditions. For each trial separate GLM model is created with regressors:  \n",
+    "- `out_individual`: modelling sigle trial\n",
+    "- `out_perr_pos`: modelling remaining trials with positive PE\n",
+    "- `out_perr_neg`: modelling remaining trials with negative PE\n",
+    "- `dec_ons`, `dec_miss`, `dec_wcor`, `res_lbp`, `res_rbp`, `res_miss`: remaining task regressors modelling events of no interest \n",
+    "\n",
+    "Script implements single-trial-versus-other-trials method (Mumford et al., 2012). All regressors model events of 0 duration. EPI images are masked before fitting GLM. GLM uses SPM hemodynamic response function, high pass filtering of 1/128Hz, standarization and 6mm smoothing kernel. Output beta-maps are raw beta values (voxelwise effect-size) for `out_individual` regressor. Beta maps for all trials are concatenated and stored as `nii.gz` file named according to BIDS-like convention:\n",
+    "\n",
+    "> `betamaps/sub-<subject_label>_task-<taks_label>_betamaps.nii.gz`\n",
+    "\n",
+    "Each `.nii.gz` file has shape $n_{epiX}\\times n_{epiY}\\times n_{epiZ}\\times n_{trials}$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
