--- a/connectivity_analysis/bsc/dn_bs_02_betamaps_exploration.ipynb
+++ b/connectivity_analysis/bsc/dn_bs_02_betamaps_exploration.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Betamaps exploration\n",
+    "\n",
+    "This script creates handy visualisations of betamaps calculated on previous step. For each subject and task condition single plot is created. Each plot consist six subplots:\n",
+    "- **top panel**: framewise displacement (FD) for entire run duration, it roughly corresponds (visually) to trials from middle panel\n",
+    "- **middle panel**: beta maps carpetplot (voxels x trials); beta maps are masked before effect size extraction\n",
+    "- **bottom-left panel**: mean beta map for +PE and -PE trials displayed in brain space\n",
+    "- **bottom-right panel**: histogram from carpetplot values marginalized over voxels and trials \n",
+    "\n",
+    "Figures are stored as `.png` files named according to BIDS-like convention:\n",
+    "\n",
+    "> `betamaps_figures/sub-<subject_label>_task-<taks_label>_carpetplot.png`\n",
+    "\n",
+    "Note that beta maps are independent of atlas choice. Therefore beta maps GLM can be done only once and used later for different parcellations. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
