--- a/connectivity_analysis/bsc/dn_bs_05_community_detection.ipynb
+++ b/connectivity_analysis/bsc/dn_bs_05_community_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +65,37 @@
     "                                   'corrmats_aggregated.npy'))\n",
     "n_subjects, n_conditions, n_perr_sign, n_rois, _ = corrmats_aggregated.shape\n",
     "\n",
-    "df_roi = pd.read_csv(join(path_corrmats, atlas, 'corrmats_aggregated.csv'))"
+    "# Load ROI information\n",
+    "df_roi = pd.read_csv(join(path_corrmats, atlas, 'roi_table_filtered.csv'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kmb/miniconda3/envs/decidenet/lib/python3.8/site-packages/bct/algorithms/modularity.py:129: RuntimeWarning: invalid value encountered in greater\n",
+      "  W0 = W * (W > 0)\n",
+      "/home/kmb/miniconda3/envs/decidenet/lib/python3.8/site-packages/bct/algorithms/modularity.py:133: RuntimeWarning: invalid value encountered in less\n",
+      "  W1 = -W * (W < 0)\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'community_aggregated' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-8831a0b7b73e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;31m# Save results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m np.save(join(path_corrmats, atlas, 'm_aggregated.npy'), \n\u001b[0;32m---> 24\u001b[0;31m         community_aggregated)\n\u001b[0m\u001b[1;32m     25\u001b[0m np.save(join(path_corrmats, atlas, 'q_aggregated.npy'), \n\u001b[1;32m     26\u001b[0m         q_aggregated)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'community_aggregated' is not defined"
+     ]
+    }
+   ],
    "source": [
     "m_aggregated = np.zeros((n_subjects, n_conditions, n_perr_sign, n_rois))\n",
     "q_aggregated = np.zeros((n_subjects, n_conditions, n_perr_sign))\n",
@@ -97,7 +120,7 @@
     "\n",
     "# Save results\n",
     "np.save(join(path_corrmats, atlas, 'm_aggregated.npy'), \n",
-    "        community_aggregated)\n",
+    "        m_aggregated)\n",
     "np.save(join(path_corrmats, atlas, 'q_aggregated.npy'), \n",
     "        q_aggregated)"
    ]
