minor changes in utils package, beta series correlation analysis

--- a/behavioral_analysis/dn_ba_08_task_figure.ipynb
+++ b/behavioral_analysis/dn_ba_08_task_figure.ipynb
@@ -13,10 +13,6 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "path_root = os.environ.get('DECIDENET_PATH')\n",
-    "path_code = os.path.join(path_root, 'code')\n",
-    "if path_code not in sys.path:\n",
-    "    sys.path.append(path_code)\n",
     "from prl_task import create_blocks, create_schedule\n",
     "from dn_utils.style import BLUE_TASK, YELLOW_TASK, MPL_STYLES\n",
     "\n",
@@ -29,6 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "path_root = os.environ.get('DECIDENET_PATH')\n",
+    "path_code = os.path.join(path_root, 'code')\n",
     "path_figures = os.path.join(\n",
     "    path_root, \n",
     "    'data/main_fmri_study/derivatives/figures/fig1')"
@@ -36,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +50,8 @@
     "trial_block = create_blocks(n_trials, n_reversals, n_min_stable)\n",
     "trial_schedule = create_schedule(n_trials, trial_block, probability)\n",
     "\n",
-    "wcor_true = [probability if block == 1 else (1-probability) for block in trial_block]\n",
+    "wcor_true = [probability if block == 1 else (1-probability) \n",
+    "             for block in trial_block]\n",
     "wcor = [0.5]\n",
     "alpha = 0.25\n",
     "for t, side in enumerate(trial_schedule[:-1]):\n",
@@ -62,27 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.9"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "0.95*2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -125,10 +104,6 @@
     "        alpha=.75, \n",
     "        edgeColor=None\n",
     "    )\n",
-    "    \n",
-    "# for t, (b1, b2) in enumerate(zip(trial_block, trial_block[1:])):\n",
-    "#     if b1 != b2:\n",
-    "#         ax.axvline(t + 1.5, color='k', lineWidth=2)\n",
     "    \n",
     "ax.set_xlim(0.5, n_trials+0.5)    \n",
     "ax.set_ylim((0, 1))\n",
