--- a/connectivity_analysis/bsc/dn_bs_00_extract_data_paths.ipynb
+++ b/connectivity_analysis/bsc/dn_bs_00_extract_data_paths.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Query BIDS dataset and extract full paths to data files\n",
+    "# Query BIDS dataset and extract full paths to data files\n",
     "\n",
     "This script uses BIDSLayout to query BIDS dataset and extract:\n",
     "- anatomical images (`anat`) \n",
@@ -12,10 +12,7 @@
     "- confounds (`conf`)\n",
     "- functional images (`fmri`)\n",
     "\n",
-    "All paths are stored as JSON file. Anatomical images paths are stored as a list of files (`anat_filenames.json`), whereas brain masks, confounds and functional images are stored as a dict with two keys corresponding to task condtions (`prlrew` and `prlpun`) and values being list of files for all subjects.\n",
-    "\n",
-    "---\n",
-    "**Last update**: 18.01.2021 "
+    "All paths are stored as JSON file. Anatomical images paths are stored as a list of files (`anat_filenames.json`), whereas brain masks, confounds and functional images are stored as a dict with two keys corresponding to task condtions (`prlrew` and `prlpun`) and values being list of files for all subjects."
    ]
   },
   {
