--- a/connectivity_analysis/bsc/dn_bs_01_betamaps_glm.ipynb
+++ b/connectivity_analysis/bsc/dn_bs_01_betamaps_glm.ipynb
@@ -16,7 +16,9 @@
     "\n",
     "> `betamaps/sub-<subject_label>_task-<taks_label>_betamaps.nii.gz`\n",
     "\n",
-    "Each `.nii.gz` file has shape $n_{epiX}\\times n_{epiY}\\times n_{epiZ}\\times n_{trials}$"
+    "Each `.nii.gz` file has shape $n_{epiX}\\times n_{epiY}\\times n_{epiZ}\\times n_{trials}$\n",
+    "\n",
+    "> Note that if you pass `design_matrices` argument to the `fit()` method of `FirstLevelModel` instance confounds **will no longer be used**! This lead to a bug, where images were not denoised even if `confounds` wass explicitely specified. No warning is raised from model instance. In this case you have to manually add confounds to your design matrix by concatenating DataFrames `dm` with `confounds`."
    ]
   },
   {
@@ -117,12 +119,14 @@
     "    \"reg_out_individual\", \"reg_out_perr_pos\", \"reg_out_perr_neg\"\n",
     "]\n",
     "regressors_save = [\"reg_out_individual\"]\n",
+    "confounds_regex = 'trans|rot|csf|white_matter'\n",
     "\n",
     "# Store settings in JSON file\n",
     "with open(join(path_out, 'options_betamaps.json'), 'w') as json_file:    \n",
     "    json.dump(dict(\n",
     "        regressors_model=regressors_model,\n",
     "        regressors_save=regressors_save,\n",
+    "        confounds_regex=confounds_regex,\n",
     "        **glm_kwargs\n",
     "    ), json_file, sort_keys=False, indent=4)  "
    ]
@@ -133,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for sub_idx, sub in enumerate(meta['dim1']):\n",
+    "for sub_idx, sub in enumerate(meta['dim1'][6:]):\n",
     "    for con_idx, con in enumerate(meta['dim2']):\n",
     "        \n",
     "        con_name = 'prl' + con\n",
@@ -141,16 +145,9 @@
     "        # Load subject data\n",
     "        fmri_img = nib.load(fmri_files[con_name][sub_idx])\n",
     "        confounds = pd.read_csv(conf_files[con_name][sub_idx], sep='\\t')\n",
-    "        confounds = confounds.filter(regex='trans|rot')\n",
+    "        confounds = confounds.filter(regex=confounds_regex)\n",
     "        confounds.index = frame_times\n",
-    "\n",
-    "        # Specify GLM\n",
-    "        fmri_glm = FirstLevelModel(\n",
-    "            **glm_kwargs,\n",
-    "            mask_img=nib.load(mask_files[con_name][sub_idx]),\n",
-    "            subject_label=sub,\n",
-    "        )\n",
-    "\n",
+    "        \n",
     "        # Setup events\n",
     "        resp_type = beh[sub_idx, con_idx, :, meta['dim4'].index('response')]\n",
     "        onset_dec = beh[sub_idx, con_idx, :, meta['dim4'].index('onset_dec')] \n",
@@ -188,8 +185,15 @@
     "        stat_maps = []\n",
     "\n",
     "        for trial in range(n_trials):\n",
-    "            print(f'Subject: {sub} | Condition: {con} | Trial: {trial+1}')\n",
+    "            print(f'Subject: {sub} | Condition: {con} |  Trial: {trial}')\n",
     "\n",
+    "            # Specify GLM\n",
+    "            fmri_glm = FirstLevelModel(\n",
+    "                **glm_kwargs,\n",
+    "                mask_img=nib.load(mask_files[con_name][sub_idx]),\n",
+    "                subject_label=sub,\n",
+    "            )\n",
+    "            \n",
     "            # Split outcome events into three categories:\n",
     "            #    trials_individual: \n",
     "            #        single separated trial\n",
@@ -221,13 +225,17 @@
     "            ]\n",
     "            dm, conditions = my_make_first_level_design_matrix(regressors)\n",
     "\n",
+    "            # Add confounds to design matrix\n",
+    "            dm_full = design_matrices=pd.concat((dm, confounds), axis=1)\n",
+    "            dm_full = dm_full.fillna(0)\n",
+    "\n",
     "            # Fit GLM\n",
-    "            fmri_glm = fmri_glm.fit(fmri_img, confounds=confounds, \n",
-    "                                    design_matrices=dm)\n",
+    "            fmri_glm = fmri_glm.fit(fmri_img, design_matrices=dm_full)\n",
     "\n",
     "            # Define contrast & compute statistical map\n",
     "            stat_map = fmri_glm.compute_contrast(\n",
-    "                    conditions['out_individual'], \n",
+    "                    np.hstack((conditions['out_individual'], \n",
+    "                               np.zeros(confounds.shape[1]))),\n",
     "                    stat_type=None,\n",
     "                    output_type='effect_size'\n",
     "            )\n",
