--- a/connectivity_analysis/bsc/dn_bs_03_betaseries_extraction.ipynb
+++ b/connectivity_analysis/bsc/dn_bs_03_betaseries_extraction.ipynb
@@ -1,8 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Betaseries extraction\n",
+    "\n",
+    "This script combines calculated whole brain trial beta-maps with brain parcellation and extracts trial beta-series for predefined set of brain regions. This analysis step has to be conducted separately for each parcellation. `NiftiSpheresMasker` is used for signal extraction with parameters:\n",
+    "- `allow_overlap=False`: ensures that parcellation has no everlapping spheres\n",
+    "- `standardize=True`: z-scores signal along trials dimension\n",
+    "- `detrend=False`: disable detrending since we are no longer in a time domain\n",
+    "- `high_pass=None`: disable high-pass filtering\n",
+    "- `low_pass=None`: disable low-pass filtering\n",
+    "\n",
+    "Use of brain mask can be enabled / disabled by setting `use_mask` flag. Note that due to signal dropout in orbitofrontal regions, that will likely lead to an error raised by masker (some ROIs will fall out of the mask). Therefore by default `use_mask=False`. Spheres outside of the brain mask – i.e. these without signal, will be removed in the next analysis step during network construction. \n",
+    "\n",
+    "Here, data from all subject and both task conditions are also aggregated into single `.npy` file for convenience. Output file is stored as:\n",
+    "\n",
+    "> `betaseries/<atlas_name>/betaseries_aggregated.npy`\n",
+    "\n",
+    "Output array has shape `n_subjects` x `n_conditions` x `n_trials` x `n_rois`. Metadata corresponding to first thee dimensions can be found in `behavioral_data_clean_all.json` file.  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,33 +64,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Select brain parcellation & masker options"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "atlas = '300_ROI_Set'\n",
-    "roi_table_fname = 'ROIs_300inVol_MNI_allInfo.txt'\n",
+    "atlas = 'combined_roi'\n",
+    "roi_table_fname = 'combined_roi_table.csv'\n",
     "\n",
+    "# Arguments for NiftiSpheresMasker\n",
     "masker_kwargs = {\n",
-    "    'allow_overlap': True, \n",
+    "    'allow_overlap': False, \n",
     "    'standardize': True, \n",
     "    'detrend': False, \n",
     "    'high_pass': None,\n",
     "    'low_pass': None\n",
     "}\n",
     "\n",
+    "# Whether to use individual brain mask during signal extraction\n",
     "use_mask = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load ROI data\n",
-    "df_roi = pd.read_csv(join(path_parcellations, atlas, roi_table_fname), sep=' ')\n",
+    "df_roi = pd.read_csv(join(path_parcellations, atlas, roi_table_fname))\n",
     "\n",
     "# Load behavioral data\n",
     "beh, meta = load_behavioral_data(path_beh, verbose=False)\n",
@@ -85,12 +116,14 @@
     "for con_idx, con in enumerate(meta['dim2']):\n",
     "    for sub_idx, sub in enumerate(meta['dim1']):\n",
     "        img_fname = f'sub-{sub}_task-prl{con}_betamaps.nii.gz' \n",
-    "        imgs[f'prl{con}'].append(nib.load(join(path_betamaps, img_fname)))"
+    "        imgs[f'prl{con}'].append(nib.load(join(path_betamaps, img_fname)))\n",
+    "        \n",
+    "df_roi.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,87 +149,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "m02 rew\n",
-      "m02 pun\n",
-      "m03 rew\n",
-      "m03 pun\n",
-      "m04 rew\n",
-      "m04 pun\n",
-      "m05 rew\n",
-      "m05 pun\n",
-      "m06 rew\n",
-      "m06 pun\n",
-      "m07 rew\n",
-      "m07 pun\n",
-      "m08 rew\n",
-      "m08 pun\n",
-      "m09 rew\n",
-      "m09 pun\n",
-      "m10 rew\n",
-      "m10 pun\n",
-      "m11 rew\n",
-      "m11 pun\n",
-      "m12 rew\n",
-      "m12 pun\n",
-      "m13 rew\n",
-      "m13 pun\n",
-      "m14 rew\n",
-      "m14 pun\n",
-      "m15 rew\n",
-      "m15 pun\n",
-      "m16 rew\n",
-      "m16 pun\n",
-      "m17 rew\n",
-      "m17 pun\n",
-      "m18 rew\n",
-      "m18 pun\n",
-      "m19 rew\n",
-      "m19 pun\n",
-      "m20 rew\n",
-      "m20 pun\n",
-      "m21 rew\n",
-      "m21 pun\n",
-      "m22 rew\n",
-      "m22 pun\n",
-      "m23 rew\n",
-      "m23 pun\n",
-      "m24 rew\n",
-      "m24 pun\n",
-      "m25 rew\n",
-      "m25 pun\n",
-      "m26 rew\n",
-      "m26 pun\n",
-      "m27 rew\n",
-      "m27 pun\n",
-      "m28 rew\n",
-      "m28 pun\n",
-      "m29 rew\n",
-      "m29 pun\n",
-      "m30 rew\n",
-      "m30 pun\n",
-      "m31 rew\n",
-      "m31 pun\n",
-      "m32 rew\n",
-      "m32 pun\n",
-      "m33 rew\n",
-      "m33 pun\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "betaseries_aggregated = np.zeros((n_subjects, n_conditions, n_trials, n_rois))\n",
     "\n",
     "for sub_idx, sub in enumerate(meta['dim1']):\n",
     "    for con_idx, con in enumerate(meta['dim2']):\n",
-    "        print(sub, con)\n",
-    "        \n",
+    "        print(f'sub {sub} con {con}')\n",
     "        mask_img = nib.load(mask_files[f'prl{con}'][sub_idx])\n",
     "        beta_img = imgs[f'prl{con}'][sub_idx]\n",
     "\n",
@@ -208,6 +169,8 @@
     "\n",
     "            # Get right spheres masker and add right whole-brain mask \n",
     "            masker = maskers[radius]['masker']\n",
+    "            \n",
+    "            # Apply mask\n",
     "            if use_mask:\n",
     "                masker.mask_img = mask_img\n",
     "\n",
