--- a/connectivity_analysis/parcellations/dn_pa_01_combine_parcellations.ipynb
+++ b/connectivity_analysis/parcellations/dn_pa_01_combine_parcellations.ipynb
@@ -935,7 +935,27 @@
     "Path(path_out).mkdir(exist_ok=True)\n",
     "\n",
     "df_roi_new = df_roi_new.sort_values(by='netName', axis=0, ascending=False)\n",
-    "df_roi_new.to_csv(join(path_out, 'combined_roi_table.csv'))"
+    "df_roi_new.to_csv(join(path_out, 'combined_roi_table.csv'), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_roi_new[\"netName\"].unique())"
    ]
   }
  ],
