refactoring bsc notebooks, added utils path to reduce amount of code repetition, added better plot_matrix fn

--- a/connectivity_analysis/bsc/dn_bs_04_betaseries_correlation.ipynb
+++ b/connectivity_analysis/bsc/dn_bs_04_betaseries_correlation.ipynb
@@ -280,9 +280,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Remaining: 268 ROIs\n",
+      "❌ Excluded: 4 ROIs\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "      <th>netCode</th>\n",
+       "      <th>netColor</th>\n",
+       "      <th>netName</th>\n",
+       "      <th>radius(mm)</th>\n",
+       "      <th>origNetName</th>\n",
+       "      <th>strategy</th>\n",
+       "      <th>origName</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>-31</td>\n",
+       "      <td>-10</td>\n",
+       "      <td>-36</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>White</td>\n",
+       "      <td>uncertain</td>\n",
+       "      <td>5</td>\n",
+       "      <td>uncertain</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>-56</td>\n",
+       "      <td>-45</td>\n",
+       "      <td>-24</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>White</td>\n",
+       "      <td>uncertain</td>\n",
+       "      <td>5</td>\n",
+       "      <td>uncertain</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>8</td>\n",
+       "      <td>41</td>\n",
+       "      <td>-24</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>White</td>\n",
+       "      <td>uncertain</td>\n",
+       "      <td>5</td>\n",
+       "      <td>uncertain</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>52</td>\n",
+       "      <td>-34</td>\n",
+       "      <td>-27</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>White</td>\n",
+       "      <td>uncertain</td>\n",
+       "      <td>5</td>\n",
+       "      <td>uncertain</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     x   y   z  netCode netColor    netName  radius(mm) origNetName strategy  \\\n",
+       "48 -31 -10 -36     -1.0    White  uncertain           5   uncertain      NaN   \n",
+       "53 -56 -45 -24     -1.0    White  uncertain           5   uncertain      NaN   \n",
+       "54   8  41 -24     -1.0    White  uncertain           5   uncertain      NaN   \n",
+       "59  52 -34 -27     -1.0    White  uncertain           5   uncertain      NaN   \n",
+       "\n",
+       "   origName  \n",
+       "48      NaN  \n",
+       "53      NaN  \n",
+       "54      NaN  \n",
+       "59      NaN  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Find ROIs with signal std equal to zero\n",
     "# Dataframe shape is (n_subjects * n_condition, n_rois)\n",
@@ -324,9 +442,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kmb/Desktop/Neuroscience/Projects/BONNA_decide_net/code/dn_utils/networks.py:7: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  new_arr = .5 * np.log((1 + arr) / (1 - arr))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "corrmats_aggregated.shape:  (32, 2, 2, 268, 268)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kmb/.local/lib/python3.8/site-packages/numpy/lib/function_base.py:2642: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  c /= stddev[:, None]\n",
+      "/home/kmb/.local/lib/python3.8/site-packages/numpy/lib/function_base.py:2643: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  c /= stddev[None, :]\n"
+     ]
+    }
+   ],
    "source": [
     "corrmats_aggregated = np.zeros(\n",
     "    (n_subjects, n_conditions, n_perr_sign, n_included_roi, n_included_roi))\n",
@@ -362,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,46 +529,6 @@
     "    \n",
     "# Save filtered ROIs\n",
     "df_roi[included_roi].to_csv(join(path_out, 'roi_table_filtered.csv'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ! TODO: move this elsewhere\n",
-    "n_mats_per_sub = 4\n",
-    "similarity = np.zeros((n_subjects, n_mats_per_sub, n_mats_per_sub))\n",
-    "\n",
-    "for sub_idx in range(n_subjects):\n",
-    "    for ki in range(n_mats_per_sub): \n",
-    "        for kj in range(n_mats_per_sub):\n",
-    "            i1, j1 = ki // 2, ki % 2\n",
-    "            i2, j2 = kj // 2, kj % 2\n",
-    "            similarity[sub_idx, ki, kj] = corr_flat_und(\n",
-    "                corrmats_aggregated[sub_idx, i1, j1],\n",
-    "                corrmats_aggregated[sub_idx, i2, j2],\n",
-    "            )\n",
-    "\n",
-    "similarity_mean = np.mean(similarity[df_exclusion['ok_all']], axis=0)\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "im = ax.imshow(similarity_mean, clim=[0, 1], cmap='Blues')\n",
-    "ax.set_xticks(range(n_mats_per_sub))\n",
-    "ax.set_yticks(range(n_mats_per_sub))\n",
-    "ax.set_xticklabels(['rew +PE', 'rew -PE', 'pun +PE', 'pun -PE'])\n",
-    "ax.set_yticklabels(['rew +PE', 'rew -PE', 'pun +PE', 'pun -PE'])\n",
-    "aligned_imshow_cbar(ax, im)\n",
-    "\n",
-    "for i in range(n_mats_per_sub):\n",
-    "    for j in range(n_mats_per_sub):\n",
-    "        text = ax.text(\n",
-    "            j, \n",
-    "            i, \n",
-    "            f'{similarity_mean[i, j]:.2f}', \n",
-    "            ha='center', \n",
-    "            va='center')"
    ]
   }
  ],
