refactored bsc notebooks, added dn_utils.path dict to remove reduntant path creation code, removed unused library imports, improved methodology

--- a/connectivity_analysis/bsc/dn_bs_04_betaseries_correlation.ipynb
+++ b/connectivity_analysis/bsc/dn_bs_04_betaseries_correlation.ipynb
@@ -23,63 +23,26 @@
     "\n",
     "> `corrmats/<atlas_name>/roi_table_filtered.csv`\n",
     "\n",
-    "Parcellation information table without excluded ROI. "
+    "Parcellation information table without excluded ROI. \n",
+    "\n",
+    "**Note:** In order to repeat analysis for normalized betaseries change input path for `betaseries_aggregated` and output paths for corrmats_aggregated.npy, corrmats_aggregated.json and roi_table_filtered.csv adding `_norm` suffix."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kmb/Desktop/Neuroscience/Projects/BONNA_decide_net/code/dn_utils/glm_utils.py:13: FutureWarning: \n",
-      "\n",
-      " | Starting with Nilearn 0.7.0, all Nistats functionality has been incorporated into Nilearn's stats & reporting modules.\n",
-      " | Nistats package will no longer be updated or maintained.\n",
-      "\n",
-      "  from nistats import design_matrix\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
-    "import os\n",
     "from os.path import join\n",
     "from pathlib import Path\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import nibabel as nib\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from dn_utils.behavioral_models import load_behavioral_data\n",
-    "from dn_utils.networks import zscore_network, standardize_network\n",
-    "from dn_utils.plotting import aligned_imshow_cbar, plot_matrix\n",
-    "from bct.algorithms.similarity import corr_flat_und\n",
-    "\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path_root = os.environ.get('DECIDENET_PATH')\n",
-    "\n",
-    "path_derivatives = join(path_root, 'data/main_fmri_study/derivatives')\n",
-    "path_sourcedata = join(path_root, 'data/main_fmri_study/sourcedata') \n",
-    "\n",
-    "path_beh = join(path_sourcedata, 'behavioral')\n",
-    "path_bsc = join(path_derivatives, 'bsc')\n",
-    "path_nistats = join(path_derivatives, 'nistats')\n",
-    "path_parcellations = join(path_derivatives, 'parcellations')\n",
-    "\n",
-    "path_corrmats = join(path_bsc, 'corrmats')\n",
-    "Path(path_corrmats).mkdir(exist_ok=True)"
+    "from dn_utils.networks import zscore_network\n",
+    "from dn_utils.path import path"
    ]
   },
   {
@@ -91,17 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "atlas = 'combined_roi'\n",
-    "roi_table_fname = 'combined_roi_table.csv'"
+    "atlas = \"combined_roi\"\n",
+    "roi_table_fname = \"combined_roi_table.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -223,52 +186,36 @@
        "4      NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Create paths\n",
+    "path_corrmats = join(path[\"bsc\"], \"corrmats\")\n",
+    "Path(path_corrmats).mkdir(exist_ok=True)\n",
+    "\n",
     "# Load behavioral data\n",
-    "beh, meta = load_behavioral_data(path_beh, verbose=False)\n",
+    "beh, meta = load_behavioral_data(path[\"behavioral\"], verbose=False)\n",
     "n_subjects = beh.shape[0]\n",
     "n_conditions = beh.shape[1]\n",
     "n_trials = beh.shape[2]\n",
     "n_perr_sign = 2\n",
     "\n",
     "# Load betaseries\n",
-    "betaseries_aggregated = np.load(join(\n",
-    "    path_bsc, f'betaseries/{atlas}/betaseries_aggregated.npy'))\n",
+    "betaseries_aggregated = np.load(\n",
+    "    join(path[\"bsc\"], f\"betaseries/{atlas}/betaseries_aggregated.npy\"))\n",
     "\n",
     "# Load ROI table\n",
-    "df_roi = pd.read_csv(join(path_parcellations, atlas, roi_table_fname))\n",
+    "df_roi = pd.read_csv(join(path[\"parcellations\"], atlas, roi_table_fname))\n",
     "n_roi = len(df_roi)\n",
     "\n",
     "# Load subject exclusion\n",
-    "df_exclusion = pd.read_csv(join(path_nistats, 'exclusion/exclusion.csv'), \n",
-    "                           index_col=0)\n",
+    "df_exclusion = pd.read_csv(\n",
+    "    join(path[\"nistats\"], \"exclusion/exclusion.csv\"), index_col=0)\n",
     "\n",
     "df_roi.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(272, 10)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_roi.shape"
    ]
   },
   {
@@ -280,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +343,7 @@
        "59      NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,12 +357,12 @@
     ")\n",
     "\n",
     "# Add columns corresponding to subjects and conditions\n",
-    "df_roi_coverage['sub'] = meta['dim1'] * 2\n",
-    "df_roi_coverage['con'] = np.repeat(meta['dim2'], n_subjects)\n",
+    "df_roi_coverage[\"sub\"] = meta[\"dim1\"] * 2\n",
+    "df_roi_coverage[\"con\"] = np.repeat(meta[\"dim2\"], n_subjects)\n",
     "\n",
     "# Remove rows corresponding to subjects excluded from the analysis \n",
-    "included_subjects = list(df_exclusion.loc[df_exclusion['ok_all'], 'sub'])\n",
-    "included_series = df_roi_coverage['sub'].map(lambda sub: sub in included_subjects)\n",
+    "included_subjects = list(df_exclusion.loc[df_exclusion[\"ok_all\"], \"sub\"])\n",
+    "included_series = df_roi_coverage[\"sub\"].map(lambda sub: sub in included_subjects)\n",
     "df_roi_coverage = df_roi_coverage.loc[included_series, :]\n",
     "\n",
     "# Mark excluded ROIs if for at least one subject there is empty signal\n",
@@ -428,8 +375,8 @@
     "n_excluded_roi = sum(excluded_roi)\n",
     "\n",
     "# Show excluded ROIs\n",
-    "print(f'✅ Remaining: {n_included_roi} ROIs')\n",
-    "print(f'❌ Excluded: {n_excluded_roi} ROIs\\n')\n",
+    "print(f\"✅ Remaining: {n_included_roi} ROIs\")\n",
+    "print(f\"❌ Excluded: {n_excluded_roi} ROIs\\n\")\n",
     "df_roi.loc[excluded_roi_list]"
    ]
   },
@@ -442,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -475,10 +422,10 @@
     "corrmats_aggregated = np.zeros(\n",
     "    (n_subjects, n_conditions, n_perr_sign, n_included_roi, n_included_roi))\n",
     "\n",
-    "for sub_idx, sub in enumerate(meta['dim1']):\n",
-    "    for con_idx, con in enumerate(meta['dim2']):\n",
+    "for sub_idx, sub in enumerate(meta[\"dim1\"]):\n",
+    "    for con_idx, con in enumerate(meta[\"dim2\"]):\n",
     "        \n",
-    "        won_bool_idx = meta['dim4'].index('won_bool')\n",
+    "        won_bool_idx = meta[\"dim4\"].index(\"won_bool\")\n",
     "        won_bool = beh[sub_idx, con_idx, :, won_bool_idx].astype(bool)            \n",
     "        \n",
     "        # Split betaseries into +PE and -PE conditions\n",
@@ -494,7 +441,7 @@
     "        corrmats_aggregated[sub_idx, con_idx, 0] = corrmat_perr_pos\n",
     "        corrmats_aggregated[sub_idx, con_idx, 1] = corrmat_perr_neg\n",
     "\n",
-    "print('corrmats_aggregated.shape: ', corrmats_aggregated.shape)"
+    "print(\"corrmats_aggregated.shape: \", corrmats_aggregated.shape)"
    ]
   },
   {
@@ -506,29 +453,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_out = join(path_corrmats, atlas)\n",
-    "Path(path_out).mkdir(exist_ok=True)\n",
+    "path_corrmats_atlas = join(path_corrmats, atlas)\n",
+    "Path(path_corrmats_atlas).mkdir(exist_ok=True)\n",
     "\n",
     "# Save aggregated correlation matrices\n",
-    "np.save(join(path_out, 'corrmats_aggregated.npy'), corrmats_aggregated)\n",
+    "np.save(join(path_corrmats_atlas, \"corrmats_aggregated.npy\"), corrmats_aggregated)\n",
     "\n",
     "# Save associated metadata\n",
     "metadata = {\n",
-    "    'dim1': meta['dim1'],\n",
-    "    'dim2': meta['dim2'],\n",
-    "    'dim3': ['perr_pos', 'perr_neg'],\n",
-    "    'dim4': list(df_roi[included_roi]['netName']),\n",
-    "    'dim5': list(df_roi[included_roi]['netName'])\n",
+    "    \"dim1\": meta[\"dim1\"],\n",
+    "    \"dim2\": meta[\"dim2\"],\n",
+    "    \"dim3\": [\"perr_pos\", \"perr_neg\"],\n",
+    "    \"dim4\": list(df_roi[included_roi][\"netName\"]),\n",
+    "    \"dim5\": list(df_roi[included_roi][\"netName\"])\n",
     "}\n",
-    "with open(join(path_out, 'corrmats_aggregated.json'), 'w') as f:\n",
+    "with open(join(path_corrmats_atlas, \"corrmats_aggregated.json\"), \"w\") as f:\n",
     "    f.write(json.dumps(metadata, indent=4))\n",
     "    \n",
     "# Save filtered ROIs\n",
-    "df_roi[included_roi].to_csv(join(path_out, 'roi_table_filtered.csv'))"
+    "df_roi[included_roi].to_csv(join(path_corrmats_atlas, \"roi_table_filtered.csv\"))"
    ]
   }
  ],
